# arkcompiler_jsvm

./: BUILD.gn  CMakeLists.txt  README.en.md  README.md  app_jit_enable_list.conf  build_jsvm.sh  build_jsvm_inter.sh  bundle.json  copy_v8.sh  copy_zlib.sh  force_llvm19.cmake  jsvm.gni
ReleaseNote/: JSVM_132_144.md
interface/kits/: jsvm.h  jsvm_types.h
src/: js_native_api_v8.cpp  js_native_api_v8.h  jsvm_api_enter.h  jsvm_compat.h  jsvm_dfx.h  jsvm_env.cpp  jsvm_env.h  jsvm_reference.cpp  jsvm_scope.cpp  jsvm_scope.h  jsvm_task.h  jsvm_util.h  jsvm_version.h  sourcemap.def
src/dfx/: faultloggerd_client.h  jsvm_dfx_api.cpp  jsvm_dfx_api.h  jsvm_hidump.cpp  jsvm_hidump.h  jsvm_misuse_reporter.cpp  jsvm_misuse_reporter.h  parse_jitcode.cpp  parse_jitcode.h
src/inspector/: inspector_socket.cpp  inspector_socket.h  inspector_socket_server.cpp  inspector_socket_server.h  inspector_utils.cpp  inspector_utils.h  js_native_api_v8_inspector.cpp  jsvm_host_port.h  jsvm_mutex.h  v8_inspector_protocol_json.h
src/platform/: platform.cpp  platform.h  platform_ohos.cpp  platform_ohos.h
test/unittest/: BUILD.gn  jsvm_utils.cpp  jsvm_utils.h  test_jsvm.cpp
