# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

ohos_unittest("test_jsvm") {
  module_out_path = "jsvm/arkcompiler_jsvm"

  cflags = [ "-g3" ]

  sources = [
    "jsvm_utils.cpp",
    "test_jsvm.cpp",
  ]
  deps = [ 
    "../..:libjsvm", 
    "../..:libv8", 
    "../..:llhttp", 
  ]
  defines = []
  if (use_clang_coverage) {
    defines += [ "CLANG_COVERAGE" ]
  }
  external_deps = [
    "googletest:gtest",
    "googletest:gtest_main",
    "libuv:uv",

    "bounds_checking_function:libsec_static",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "icu:shared_icui18n",
    "icu:shared_icuuc",
    "init:libbegetutil",
    "openssl:libcrypto_shared",
    "openssl:libssl_shared",
    "resource_schedule_service:ressched_client",
    "zlib:libz",
  ]
}

group("jsvm_unittest") {
  testonly = true
  deps = [ ":test_jsvm" ]
}
